display: neues Design nach Entwurf

--- a/5.0/display/src/app/app.component.html
+++ b/5.0/display/src/app/app.component.html
@@ -19,7 +19,7 @@
 </table>
 <h2><span *ngIf="list.length &lt; 8">Bitte warten Sie, bis Ihre Nummer erscheint.</span></h2>
 <footer>
-  <h5>23.03.2022</h5>
+  <h5>{{ now | date: "shortDate" }}</h5>
   <svg class="logo" viewBox="0 0 160 53.138">
   <path d="M151.802,8.327c2.517,0,4.345,0.884,5.483,2.662c1.124,1.777,1.69,4.681,1.69,8.719v11.631
   c0,4.022-0.566,6.909-1.69,8.669c-1.138,1.769-2.966,2.645-5.483,2.645h-2.359c-2.545,0-4.373-0.876-5.504-2.645
@@ -58,7 +58,7 @@
   c-0.09-0.209-0.055-0.35,0.117-0.434c1.952-0.834,3.69-1.635,5.214-2.403c0.221,2.511,1.048,4.773,2.483,6.792
   c0.945,1.31,2.69,3.087,5.214,5.332C15.207,26.867,15.296,27.043,15.296,27.218"/>
   </svg>
-  <h5>13:45 Uhr</h5>
+  <h5>{{ now | date: "shortTime" }} Uhr</h5>
 </footer>
 
 <!--
