--- a/5.0/display/src/app/app.component.scss
+++ b/5.0/display/src/app/app.component.scss
@@ -112,7 +112,7 @@ footer {
 
   /* designo logo */
   .logo {
-    width: 5vw;
+    height: 1em;
     fill: #e3e3e3;
     justify-self: center;
   }
