printer: Funktion QR-Code vergessen eingebaut

--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -112,6 +112,27 @@
     <text key="60">60 min</text>
   </content_class>
 </field>
+<field key="fg">
+  <names>
+    <name>Zeige "QR Code vergessen"</name>
+  </names>
+  <content_class type="TextChoose">
+    <text key="0">Nein</text>
+    <text key="1">Ja</text>
+  </content_class>
+</field>
+<field key="fgq">
+  <names>
+    <name>Warteschlange Vergessen</name>
+  </names>
+  <content_class type="VocatisQueue"  />
+</field>
+<field key="fgc">
+  <names>
+    <name>Kategorie Vergessen</name>
+  </names>
+  <content_class type="VocatisCategories"/>
+</field>
 <field key="aei">
   <names>
     <name>Terminfehler Info</name>
