--- a/5.0/printer/src/app/scan-appointment/scan-appointment.component.html
+++ b/5.0/printer/src/app/scan-appointment/scan-appointment.component.html
@@ -8,3 +8,9 @@
   fixedfocus
   spellcheck="false"
 ></textarea>
+
+<nav *ngIf="showForgotQR">
+  <a (click)="printForgotQrCode()">
+    {{ "Appoint_ForgotInvite" | translate }}
+  </a>
+</nav>
