--- a/5.0/printer/src/app/scan-appointment/scan-appointment.component.scss
+++ b/5.0/printer/src/app/scan-appointment/scan-appointment.component.scss
@@ -15,3 +15,20 @@ h1 {
   font-size: 2.7em;
   font-weight: bold;
 }
+
+nav {
+  display: flex;
+  margin: 5vh 0;
+  a {
+    flex: 1;
+    border: 3px solid $color-common-foreground;
+    color: $color-common-foreground;
+    padding: 2vh 2vw;
+    font-size: 2.5em;
+    text-align: center;
+  }
+  a:hover {
+    background-color: $color-primary-background;
+    color: $color-primary-foreground;
+  }
+}
