Printer: Layout kundespezifisch angepasst

--- a/5.0/printer/app_src/environments/environment.prod.ts.handlebars
+++ b/5.0/printer/app_src/environments/environment.prod.ts.handlebars
@@ -3,5 +3,5 @@ export const environment = {
   statusServiceUrl: "status.cshtml",
   numberServiceUrl: "number.cshtml",
   enableMultilang: {{multilang}},
-  refreshInterval: 10 * 1000 /* ms */
+  refreshInterval: 10 * 1000 /* ms */,
 };
