--- a/5.0/printer/src/app/handle-appointment/handle-appointment.component.scss
+++ b/5.0/printer/src/app/handle-appointment/handle-appointment.component.scss
@@ -5,24 +5,36 @@
   @include panel;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 2fr;
-  padding: 5vh 20vw;
+  grid-template-rows: 1fr 1fr 1fr;
+  padding: 0vh 15vw;
   gap: 5vh 5vw;
+}
+img {
+  position: absolute;
+  width: 7%;
+  vertical-align: middle;
+  padding: 8vh 0;
+}
+
+h1 {
+  grid-column: 1/3;
+  font-size: 3em;
+  line-height: 4rem;
+  font-weight: normal;
+  padding: 15vh 0;
 }
 
 h3 {
   grid-column: 1/3;
-  font-size: 2em;
-
-  img {
-    width: 5%;
-    vertical-align: middle;
-  }
+  font-size: 2.5em;
+  font-weight: normal;
+  padding: 8.5vh 0 0 10vw;
 }
 
 p {
   grid-column: 1/3;
-  font-size: 2rem;
+  font-size: 3.5rem;
+  line-height: 5rem;
 }
 
 .left {
