--- a/5.0/printer/src/app/print/print.component.scss
+++ b/5.0/printer/src/app/print/print.component.scss
@@ -23,15 +23,17 @@ section {
     fill: $color-secondary-foreground;
   }
   h4 {
-    font-size: 2em;
+    padding-top: 8vh;
+    font-size: 3em;
     color: $color-secondary-foreground;
     display: inline-block;
   }
   p {
-    font-size: 1.8em;
+    font-size: 2em;
     font-weight: 600;
     color: $color-primary-background;
   }
+
   .number {
     font-size: 4em;
   }
