Displaylist Layout kundenspezifisch geändert
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/display/src/app/list/list.component.html
+++ b/5.0/display/src/app/list/list.component.html
@@ -1,8 +1,8 @@
 <header>
   <img
-    src="assets/img/plattformlogo.png"
+    src="assets/img/customerlogo.png"
     class="plattformlogo"
-    alt="plattformlogo"
+    alt="radiologicum wien"
   />
   <h1></h1>
 </header>
