--- a/5.0/printer/src/mixins.scss
+++ b/5.0/printer/src/mixins.scss
@@ -4,3 +4,16 @@
   height: 60vh;
   padding: 0 15vw;
 }
+
+@mixin nav-button {
+  /* common style for navigation buttons */
+  border: 3px solid $color-common-foreground;
+  color: $color-common-foreground;
+  padding: 2vh 2vw;
+  font-size: 2.5em;
+
+  &:hover {
+    background-color: $color-primary-background;
+    color: $color-primary-foreground;
+  }
+}
