printer: Pfeilrichtung für Hinweispfeil umschaltbar

--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -36,6 +36,15 @@
 {{/if}}
   </content_class>
 </field>
+<field key="ar">
+  <names>
+    <name>Hinweispfeil</name>
+  </names>
+  <content_class type="TextChoose">
+    <text key="r">rechts</text>
+    <text key="d">unten</text>
+  </content_class>
+</field>
 <field key="tracking_id">
   <names>
     <name>Tracking-ID</name>
