--- a/5.0/printer/src/app/print/print.component.scss
+++ b/5.0/printer/src/app/print/print.component.scss
@@ -18,6 +18,10 @@ section {
   img {
     width: 13%;
   }
+  svg {
+    width: 13%;
+    fill: $color-secondary-foreground;
+  }
   h4 {
     font-size: 2em;
     color: $color-secondary-foreground;
