--- a/5.0/printer/src/app/scan-appointment/scan-appointment.component.html
+++ b/5.0/printer/src/app/scan-appointment/scan-appointment.component.html
@@ -1,5 +1,10 @@
 <section>
-  <img src="assets/img/direction.png" alt="direction" />
+  <svg *ngIf="arrow != 'down'" viewBox="0 0 106.95 106.47"><g>
+    <polygon points="41.74,106.13 94.9,53.34 41.74,0.82 41.74,1.33 41.74,25.03 13.04,25.03 13.04,81.44 13.04,81.91 40.74,81.91 41.74,81.91 41.74,104.66"/>
+  </g></svg>
+  <svg *ngIf="arrow == 'down'" viewBox="0 0 106.95 106.47"><g>
+    <polygon points="0.58,41.5 53.37,94.66 105.89,41.5 105.38,41.5 81.68,41.5 81.68,12.8 25.27,12.8 24.8,12.8 24.8,40.5 24.8,41.5 2.05,41.5"/>
+  </g></svg>
   <h1>{{ "Appoint_Scan" | translate }}</h1>
 </section>
 <textarea
