--- a/5.0/printer/src/app/scan-appointment/scan-appointment.component.scss
+++ b/5.0/printer/src/app/scan-appointment/scan-appointment.component.scss
@@ -7,9 +7,10 @@ section {
   flex-direction: column;
   justify-content: space-evenly;
 }
-img {
+svg {
   width: 30%;
   align-self: center;
+  fill: $color-secondary-foreground;
 }
 h1 {
   font-size: 2.7em;
