--- a/5.0/room-display/src/app/app.component.html
+++ b/5.0/room-display/src/app/app.component.html
@@ -1,2 +1,1 @@
-<app-list *ngIf="!popup" [list]="list" [highlight]="getHighlightedItems()"></app-list>
-<app-popup *ngIf="popup" [waitNumber]="popup"></app-popup>
+<app-popup *ngIf="popup" [waitNumber]="popup" [highlight]="highlight"></app-popup>
