--- a/5.0/room-display/src/styles.scss
+++ b/5.0/room-display/src/styles.scss
@@ -17,7 +17,7 @@ html {
 
 body {
   /* text */
-  font-family: Futura, Arial, Helvetica, sans-serif;
+  font-family: Verdana, sans-serif;
   /* background */
   background-color: $color-common-background;
 }
