display: Schlüssel und Bezeichnung für Vorlage angepasst (Radiologicum Wien)

--- a/5.0/display/src/Styles.xml.handlebars
+++ b/5.0/display/src/Styles.xml.handlebars
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <StyleList xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://stollsoft.de/iSign/v2/Content/Forms/Styles">
 
-  <style key="vocatic_display_2019"
+  <style key="vocatis_display_2019_radiologicumwien"
           file="index.cshtml" preview="assets/img/preview_list.png"
          interactive="false" target="chromium">
     <names>
-      <name culture="de">vocatis list ({{version}})</name>
+      <name culture="de">vocatis list Radiologicum Wien ({{version}})</name>
     </names>
     <fields>
       <field key="source1">
@@ -61,11 +61,11 @@
   </style>
 
 
-  <style key="vocatic_display3_2019"
+  <style key="vocatis_display3_2019_radiologicumwien"
           file="index.cshtml" preview="assets/img/preview_multilist.png"
          interactive="false" target="chromium">
     <names>
-      <name culture="de">vocatis list multi ({{version}})</name>
+      <name culture="de">vocatis list multi Radiologicum Wien ({{version}})</name>
     </names>
     <fields>
       {{#range 1 9}}
