--- a/5.0/styles/colors.scss
+++ b/5.0/styles/colors.scss
@@ -1,11 +1,11 @@
 /* All colors defined here */
-$color-primary-background: #53668d;
-$color-primary-shadowred: #53668d;
+$color-primary-background: #8ab7e9;
+$color-primary-shadowred: #8ab7e9;
 $color-primary-foreground: white;
 $color-secondary-background: #d7d7d7;
 $color-secondary-foreground: #707173;
 $color-secondary-shadow: #c3c3c3;
-$color-primary-shadow: #53668d;
+$color-primary-shadow: #8ab7e9;
 $color-highlight-background: red;
 $color-highlight-foreground: white;
 $color-common-background: $color-primary-foreground;
