room-display: Highlight animation geändert

--- a/5.0/room-display/src/app/popup/popup.component.scss
+++ b/5.0/room-display/src/app/popup/popup.component.scss
@@ -52,10 +52,11 @@
 
 .highlight {
   animation: blinker 1s linear infinite;
+  color: $color-primary-background;
 }
 
 @keyframes blinker {
   50% {
-    color: $color-primary-background;
+    opacity: 0.6;
   }
 }
