--- a/5.0/printer/src/index.cshtml
+++ b/5.0/printer/src/index.cshtml
@@ -12,7 +12,7 @@
   <meta charset="utf-8">
   <title>Vocatis Drucker</title>
   <base href='@Href(relPath)'>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 </head>
 <body>
