printer: Vorlagenbezeichnung angepasst

--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -188,7 +188,7 @@
   <style key="vocatis_radiologicummargareten{{suffix}}" file="printer/index.cshtml"
          interactive="true" target="chromium" preview="printer/assets/img/preview.png">
     <names>
-      <name culture="de">vocatis printer {{option_name}} ({{version}})</name>
+      <name culture="de">vocatis printer {{option_name}} Radiologicum Wien ({{version}})</name>
     </names>
     <fields>
       {{> commonFields}}
