--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -54,20 +54,12 @@
 {{/inline}}
 
 {{#*inline "appointmentFields"}}
-{{#range 1 9}}
-<field key="ap_pn{{this}}">
-  <names>
-    <name>Terminplan {{this}}</name>
-  </names>
-  <content_class type="TextFree" />
-</field>
-<field key="ap_qi{{this}}">
+<field key="ap_qi">
   <names>
     <name>Warteschlange Termin {{this}}</name>
   </names>
   <content_class type="VocatisQueue"  />
 </field>
-{{/range}}
 <field key="catid_apt">
   <names>
     <name>Kategorie Termin</name>
@@ -124,64 +116,6 @@
     <name>Terminfehler Info</name>
   </names>
   <content_class type="TextFree" />
-</field>
-<field key="import">
-  <names>
-    <name>Termine</name>
-  </names>
-  <content_class type="DataSource" />
-</field>
-<field key="id">
-  <names>
-    <name>ID</name>
-  </names>
-  <content_class bind="Column" parentField="import" type="TextFree" />
-</field>
-<field key="ref">
-  <names>
-    <name>Referenz</name>
-  </names>
-  <content_class bind="Column" parentField="import" type="TextFree" />
-</field>
-<field key="date">
-  <names>
-    <name>Datum</name>
-  </names>
-  <content_class bind="Column" parentField="import" type="TextFree" />
-</field>
-<field key="datef">
-  <names>
-    <name>Datumsformat</name>
-  </names>
-  <content_class type="TextChoose">
-    <text key="de-de">Deutschland</text>
-    <text key="en-us">USA</text>
-    <text key="iso8601">ISO 8601</text>
-  </content_class>
-</field>
-<field key="time">
-  <names>
-    <name>Uhrzeit</name>
-  </names>
-  <content_class bind="Column" parentField="import" type="TextFree" />
-</field>
-<field key="name">
-  <names>
-    <name>Name</name>
-  </names>
-  <content_class bind="Column" parentField="import" type="TextFree" />
-</field>
-<field key="title">
-  <names>
-    <name>Anliegen</name>
-  </names>
-  <content_class bind="Column" parentField="import" type="TextFree" />
-</field>
-<field key="plan">
-  <names>
-    <name>Terminplan</name>
-  </names>
-  <content_class bind="Column" parentField="import" type="TextFree" />
 </field>
 {{/inline}}
 
