--- a/5.0/import/Styles.xml.handlebars
+++ b/5.0/import/Styles.xml.handlebars
@@ -49,6 +49,12 @@
   </names>
   <content_class bind="Column" parentField="import" type="TextFree" />
 </field>
+<field key="wn">
+  <names>
+    <name>Wartenummer</name>
+  </names>
+  <content_class bind="Column" parentField="import" type="TextFree" />
+</field>
 <field key="ref">
   <names>
     <name>Referenz</name>
