--- a/5.0/printer/src/app/ticket/ticket.component.scss
+++ b/5.0/printer/src/app/ticket/ticket.component.scss
@@ -4,7 +4,9 @@
   /* complete drawing width of printer: 228px */
   box-sizing: border-box;
   width: 228px;
-  padding: 1mm;
+
+  /* printer adds 2mm left/right padding automatically */
+  padding: 4mm 2mm;
 
   background-color: white;
   color: black;
@@ -15,22 +17,40 @@ header {
 }
 h1 {
   font-size: 40px;
-  margin: 5mm 0;
+  margin: 2mm 0;
+}
+.customerlogo {
+  width: 80%;
 }
 img {
   width: 100%;
 }
 
 footer {
-  display: flex;
-  align-items: center;
-  padding: 2mm;
-  gap: 2mm;
+  text-align: left;
+  font-size: 1rem;
+
   & > * {
     flex: 1;
   }
   figcaption {
+    font-size: 10px;
+    text-align: center;
+    padding: 1mm 8mm;
+  }
+
+  qrcode {
+    display: block;
+    padding: 1mm 11mm;
+  }
+
+  p {
+    padding: 2mm 0mm 2mm 11mm;
+    float: left;
     font-size: 12px;
-    margin-bottom: 5px;
+  }
+  p:last-child {
+    float: right;
+    padding: 2mm 11mm 2mm 0mm;
   }
 }
