--- a/5.0/printer/src/app/ticket/ticket.component.html
+++ b/5.0/printer/src/app/ticket/ticket.component.html
@@ -1,10 +1,9 @@
 <ng-container *ngIf="number">
   <header>
-    {{ now | date: "mediumDate":undefined:locale }}&nbsp;&nbsp;&nbsp;{{
-      now | date: "shortTime":undefined:locale
-    }}
   </header>
+  <h2>RADIOLOGICUM</h2>
   <h1>{{ number.number }}</h1>
+  
   <img
     src="assets/img/separation.png"
     class="separation"
@@ -20,11 +19,13 @@
         [width]="1600"
       ></qrcode>
     </figure>
-    <img
+ <!--<img
       src="assets/img/customerlogo.png"
       class="customerlogo"
       alt="logo"
       (load)="onImgLoaded($event)"
-    />
+    />-->
+    <p>{{ now | date: "shortTime":undefined:locale}} Uhr</p>
+    <p>{{ now | date: "mediumDate":undefined:locale }}</p>
   </footer>
 </ng-container>
