--- a/5.0/printer/src/app/handle-appointment/handle-appointment.component.scss
+++ b/5.0/printer/src/app/handle-appointment/handle-appointment.component.scss
@@ -12,17 +12,18 @@
 
 h3 {
   grid-column: 1/3;
-  font-size: 2em;
+  font-size: 3em;
 
   img {
-    width: 5%;
+    width: 10%;
     vertical-align: middle;
   }
 }
 
 p {
   grid-column: 1/3;
-  font-size: 2rem;
+  font-size: 2.5rem;
+  line-height: 3.5rem;
 }
 
 .left {
