--- a/5.0/printer/src/app/scan-appointment/scan-appointment.component.scss
+++ b/5.0/printer/src/app/scan-appointment/scan-appointment.component.scss
@@ -13,7 +13,8 @@ svg {
   fill: $color-secondary-foreground;
 }
 h1 {
-  font-size: 2.7em;
+  font-size: 3em;
+  line-height: 4rem;
   font-weight: bold;
 }
 
