--- a/5.0/printer/src/mixins.scss
+++ b/5.0/printer/src/mixins.scss
@@ -7,7 +7,7 @@
 
 @mixin nav-button {
   /* common style for navigation buttons */
-  border: 3px solid $color-common-foreground;
+  border: 0.2rem solid $color-common-foreground;
   color: $color-common-foreground;
   padding: 2vh 2vw;
   font-size: 2.5em;
