--- a/5.0/printer/src/app/ticket/ticket.component.scss
+++ b/5.0/printer/src/app/ticket/ticket.component.scss
@@ -17,7 +17,7 @@ header {
 }
 h1 {
   font-size: 40px;
-  margin: 2mm 0;
+  margin: 0 0 2mm 0;
 }
 .customerlogo {
   width: 80%;
@@ -34,7 +34,8 @@ footer {
     flex: 1;
   }
   figcaption {
-    font-size: 10px;
+    font-size: 17px;
+    font-weight: bold;
     text-align: center;
     padding: 1mm 8mm;
   }
