Printer: Warteschlange open/close Button rausgenommen

--- a/5.0/printer/src/app/select-queue/select-queue.component.scss
+++ b/5.0/printer/src/app/select-queue/select-queue.component.scss
@@ -27,9 +27,11 @@
 
   &.closed {
     color: $color-secondary-foreground;
+    grid-template-rows: 1fr 20%; /* respect gaps! */
 
     .single-button {
       background-color: $color-secondary-foreground;
+      display: none;
     }
   }
 
