--- a/5.0/printer/src/app/select-queue/select-queue.component.html
+++ b/5.0/printer/src/app/select-queue/select-queue.component.html
@@ -24,13 +24,15 @@
     <div *ngFor="let button of buttons" (click)="view == 'open' ? print(button) : null"
          [class]="'buttons buttons-1 btn ' + view" [ngClass]="{'open': view == 'open', 'closed': view != 'open', 'next-one': buttons[0].queueLength == 0}">
       <h5>{{ button.title }}</h5>
-
       <ng-template [ngIf]="!showQrCode">
+        <span *ngIf="showQrCode">{{ "List_Print" | translate }}</span> 
         <div class="single-button">
         </div>
       </ng-template>
       <ng-template [ngIf]="showQrCode">
         <div class="button-with-qr">
+        <span *ngIf="showQrCode">{{ "List_Print" | translate }}</span>
+        <span *ngIf="showQrCode">{{ "List_Scan" | translate }}</span>
           <div class="single-button"></div>
           <qrcode *ngIf="showQrCode" [qrdata]="getAppTicketLink(buttons[0])" [margin]="0" (click)="qrClick(buttons[0])"></qrcode>
         </div>
