Printer Single Button geschlossen> QR-Code mit Überschrift ausgeblendet

--- a/5.0/printer/src/app/select-queue/select-queue.component.scss
+++ b/5.0/printer/src/app/select-queue/select-queue.component.scss
@@ -33,6 +33,9 @@
       background-color: $color-secondary-foreground;
       display: none;
     }
+    .button-with-qr {
+      display: none;
+    }
   }
 
   h5 {
