printer / app: Handle queue id empty

--- a/5.0/printer/app_src/status.cshtml
+++ b/5.0/printer/app_src/status.cshtml
@@ -4,6 +4,8 @@
 @using System.Web.Caching
 @functions{
   string QueueNameCached(CommonGuidId id) {
+    if (id.IsEmpty) return null;
+
     string key = "Vocatis_QueueName_" + id.ToString();
     string queueName = Cache.Get(key) as string;
     if (queueName == null)
