--- a/5.0/printer/src/app/select-queue/select-queue.component.scss
+++ b/5.0/printer/src/app/select-queue/select-queue.component.scss
@@ -183,6 +183,7 @@
     background-color: $color-secondary-background;
     color: $color-secondary-foreground;
     text-align: center;
+    text-overflow: ellipsis;
 
     &.open {
       box-shadow: 1px 3px 1px $color-secondary-shadow;
@@ -193,6 +194,10 @@
       align-self: center;
       font-weight: bold;
       font-size: 3.3rem;
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 2;
     }
 
     & > div {
