--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -212,7 +212,7 @@
   <style key="vocatis_multi_2019_groupconfig{{suffix}}" file="printer/index.cshtml"
          interactive="true" target="chromium" preview="printer/assets/img/preview.png">
     <names>
-      <name culture="de">vocatis printer Gruppenkonfiguration ({{version}})</name>
+      <name culture="de">vocatis printer Gruppenkonfiguration {{option_name}} ({{version}})</name>
     </names>
     <fields>
       {{> commonFields}}
