--- a/5.0/queueinfo/Styles.xml.handlebars
+++ b/5.0/queueinfo/Styles.xml.handlebars
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <StyleList xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://stollsoft.de/iSign/v2/Content/Forms/Styles">
-  <style key="vocatic_queueinfo_2019" file="QueueInfo.cshtml" preview="preview.png"
+  <style key="vocatic_queueinfo_2019{{suffix}}" file="QueueInfo.cshtml" preview="preview.png"
          interactive="true" target="chromium">
     <names>
-      <name culture="de">Vocatis Warteinformation ({{version}})</name>
+      <name culture="de">Vocatis Warteinformation {{option_name}} ({{version}})</name>
     </names>
     <fields>
       <field key="appurl">
