--- a/5.0/api/Styles.xml.handlebars
+++ b/5.0/api/Styles.xml.handlebars
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <StyleList xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://stollsoft.de/iSign/v2/Content/Forms/Styles">
-  <style key="vocatis_api"
+  <style key="vocatis_api{{suffix}}"
          file="GetTicket.cshtml"
          target="Forms2">
     <names>
-      <name culture="de">Vocatis API (NICHT EINPLANEN) ({{version}})</name>
+      <name culture="de">Vocatis API (NICHT EINPLANEN) {{option_name}} ({{version}})</name>
     </names>
     <fields>
       <field key="queueid1">
