css/farben: highlight-Schema in error umbenannt und neues highlight Schema erstellt.

--- a/5.0/printer/app_src/app/app.component.scss
+++ b/5.0/printer/app_src/app/app.component.scss
@@ -170,7 +170,7 @@ main {
   }
 
   &.error {
-    background-color: $color-highlight-background;
+    background-color: $color-error-background;
     color: $color-primary-foreground;
     text-align: center;
 
