--- a/5.0/styles/colors.scss
+++ b/5.0/styles/colors.scss
@@ -6,8 +6,12 @@ $color-secondary-background: #d7d7d7;
 $color-secondary-foreground: #707173;
 $color-secondary-shadow: #c3c3c3;
 $color-primary-shadow: #53668d;
-$color-highlight-background: red;
-$color-highlight-foreground: white;
+/* error / fail */
+$color-error-background: red;
+$color-error-foreground: white;
+/* list highlight */
+$color-highlight-background: $color-primary-background;
+$color-highlight-foreground: $color-primary-foreground;
 $color-common-background: $color-primary-foreground;
 $color-common-foreground: $color-primary-background;
 $color-font-shadow: #707173e0;
